# tmux-powerline

./: .editorconfig  .gitignore  .lan_ip.sh.swo  .semver.yaml  .tmux.conf  .wan_ip.sh.swo  AUTHORS  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  Makefile  README.md  color_palette.sh  config.sh  date_day.sh  doctor.sh  generate_config.sh  generate_rc.sh  groups  hostname.sh  lib.sh  main.tmux  mpd_np.c  mpd_np.sh  mute_powerline.sh  powerline.sh  powerlinel.sh  powerliner.sh  project.config  status-left.sh  status-right.sh  status-right.sh.org  time.sh  tmux_session_info.sh  uptime.sh  wan_ip.sh
.devcontainer/: devcontainer.json
.github/workflows/: linter-full.yml  linter-pr.yml  linter.yml  linter.yml.disabled  stale.yml
addins/: battery.sh  lan_ip.sh  load.sh  maildir_inbox_count.sh  mpd_np.c  mpd_np.sh  uptime.sh  wan_ip.sh  weather.sh
config/: default.sh  defaults.sh  helpers.sh  paths.sh  shell.sh
img/: logo.pxd
lib/: arg_processing.sh  colors.sh  config_file.sh  cpu_temp_helper.sh  formatting.sh  headers.sh  mem_used_helper.sh  muting.sh  options.sh  powerline.sh  rcfile.sh  text_marquee.sh  text_roll.sh  tmux_adapter.sh  util.sh  vcs_helper.sh
scripts/: color_palette.sh  devcontainer_postCreateCommand.sh
segments/: Makefile  air.sh  air_color.sh  apple_mail_count.sh  battery.sh  battery_mac.sh  cpu.sh  cpu_temp.sh  date.sh  date_day.sh  date_full.sh  date_week.sh  disk_usage.sh  dropbox_status.sh  earthquake.sh  erikw  gcalcli.sh  github_notifications.sh  gmail_count.sh  gnome4_layout.sh  hostname.sh  ifstat.sh  ifstat_sys.sh  itunes_np_mac.sh  kubernetes_context.sh  lan_ip.sh  load.sh  macos_notification_count.sh  mail_count.sh  mail_count_apple_mail.sh  mail_count_gmail.sh  mail_count_maildir.sh  mail_count_mbox.sh  mailcount.sh  mailcount_apple_mail.script  maildir_count.sh  maildir_inbox_count.sh  mem.sh  mem_used.sh  mode_indicator.sh  (+50 more)
src/: status-right.sh
src/segments/: ifstat_sys.sh  mail_count_gmail.sh  mail_count_mbox.sh  np_mocp.sh  np_mpd.sh  np_rdio_mac.script  np_rdio_mac.sh  np_rhythmbox.sh  weather_yahoo.sh
themes/: base16.sh  bubble.sh  bubble_theme.sh  davidxia.sh  default.sh  erikw.sh  mafro.sh  mytheme.sh  tmux-powerline.rc  with_mbox.sh
